# claude-voice-multiplexer

./: .env.example  .gitignore  .mcp.json  INVESTIGATION-relay-tools-vs-markdown.md  OVERLAY_PLAN.md  PLAN-v3.md  PLAN.md  README.md  STANDBY_REMOVAL_PLAN.md  relay  token-server.py
.claude-plugin/: plugin.json
client/: app.js  index.html  styles.css
daemon/: ipc_server.py  pyproject.toml  service_manager.py  session_manager.py  vmux  vmuxd.py
hooks/: hooks.json
mcp-server/: requirements.txt  server.py  start.sh
overlay/: overlay.py  pyproject.toml  test_window.py
overlay/VmuxOverlay.app/Contents/: Info.plist
overlay/VmuxOverlay.app/Contents/MacOS/: vmux-overlay
relay-server/: audio.py  auth.py  config.py  livekit_agent.py  mcp_tools.py  metadata_store.py  registry.py  replacements.py  requirements.txt  server.py  test_replacements.py  test_text_pipeline.py  test_tts_sanitize.py  text_pipeline.py  tts_sanitize.py
scripts/: env.template  install.sh  replacements.json  start.sh  status.sh  stop.sh  uninstall.sh  vmux-ask-user-question-hook.sh  vmux-permission-request-hook.sh  vmux-post-compact-hook.sh  vmux-post-tool-use-hook.sh  vmux-pre-compact-hook.sh  vmux-pre-tool-use-hook.sh  vmux-session-start-hook.sh  vmux-statusline.sh  vmux-stop-hook.sh  vmux-subagent-start-hook.sh  vmux-subagent-stop-hook.sh  vmux-task-created-hook.sh  vmux-task-update-hook.sh  vmux-tool-activity-hook.sh  vmux-tool-result-hook.sh  vmux-user-prompt-submit-hook.sh
skills/auth-code/: SKILL.md
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: sw.js  (+1 more)
(+87 files in other folders)
